add custom role
