# public/swagger.json
@@ -144,11 +144,7 @@
 				"tags": [
 					"Book-copies"
 				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
+				"security": [],
 				"parameters": []
 			},
 			"post": {
@@ -168,11 +164,7 @@
 				"tags": [
 					"Book-copies"
 				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
+				"security": [],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
@@ -209,11 +201,7 @@
 				"tags": [
 					"Book-copies"
 				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
+				"security": [],
 				"parameters": [
 					{
 						"in": "path",
@@ -248,11 +236,7 @@
 				"tags": [
 					"Book-copies"
 				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
+				"security": [],
 				"parameters": [
 					{
 						"in": "path",
@@ -287,7 +271,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"delete:BookCopy"
+						]
 					}
 				],
 				"parameters": [
